tread 기본 구현